--- a/index.html
+++ b/index.html
@@ -275,22 +275,22 @@
                 botao.classList.add('cota-selected');
                 switch (valorBotao) {
                     case 10:
-                        link = "https://pay.seustitulosvivasorte.com/4KovG1JlQ2EgyDE";
+                        link = "https://pay.segurospag.com/checkout/5203589a-6b3f-47e3-95d1-8ff1530d34a3";
                         break;
                     case 20:
-                        link = "https://pay.seustitulosvivasorte.com/lqv1302oypLGxbj";
+                        link = "https://pay.segurospag.com/checkout/36edfc92-1679-483d-87ac-49b628a9b382";
                         break;
                     case 50:
-                        link = "https://pay.seustitulosvivasorte.com/4KovG1JlQ0VgyDE";
+                        link = "https://pay.segurospag.com/checkout/981551c4-add4-48e4-87b0-8ba9b036aea6";
                         break;
                     case 100:
-                        link = "https://pay.seustitulosvivasorte.com/a9ArZMYml2OZ7xj";
+                        link = "https://pay.segurospag.com/checkout/52a389b9-cc74-438e-827c-3add6daaee68";
                         break;
                     case 200:
-                        link = "https://pay.seustitulosvivasorte.com/bz5KZb70Va6G7dL";
+                        link = "https://pay.segurospag.com/checkout/c96566f1-2f38-4393-954a-7cd2eea569cf";
                         break;
                     case 500:
-                        link = "https://pay.seustitulosvivasorte.com/DPXw3Xr2eVOGzmp";
+                        link = "https://pay.segurospag.com/checkout/c1bcd6b0-8f2d-4e4f-82e2-07d12acc3803";
                         break;
                     default:
                         break;
